# swagger_server/models/__init__.py
@@ -4,8 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.error import Error
-from swagger_server.models.paged_persons import PagedPersons
-from swagger_server.models.paged_personsv2 import PagedPersonsv2
-from swagger_server.models.paging import Paging
 from swagger_server.models.person import Person
 from swagger_server.models.persons import Persons
