# swagger_server/models/paged_personsv2.py
@@ -1,170 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.person import Person  # noqa: F401,E501
-from swagger_server.models.persons import Persons  # noqa: F401,E501
-from swagger_server import util
-
-
-class PagedPersonsv2(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, items: List[Person]=None, total_items: int=None, total_pages: int=None, page_size: int=None, current_page: int=None):  # noqa: E501
-        """PagedPersonsv2 - a model defined in Swagger
-
-        :param items: The items of this PagedPersonsv2.  # noqa: E501
-        :type items: List[Person]
-        :param total_items: The total_items of this PagedPersonsv2.  # noqa: E501
-        :type total_items: int
-        :param total_pages: The total_pages of this PagedPersonsv2.  # noqa: E501
-        :type total_pages: int
-        :param page_size: The page_size of this PagedPersonsv2.  # noqa: E501
-        :type page_size: int
-        :param current_page: The current_page of this PagedPersonsv2.  # noqa: E501
-        :type current_page: int
-        """
-        self.swagger_types = {
-            'items': List[Person],
-            'total_items': int,
-            'total_pages': int,
-            'page_size': int,
-            'current_page': int
-        }
-
-        self.attribute_map = {
-            'items': 'items',
-            'total_items': 'totalItems',
-            'total_pages': 'totalPages',
-            'page_size': 'pageSize',
-            'current_page': 'currentPage'
-        }
-
-        self._items = items
-        self._total_items = total_items
-        self._total_pages = total_pages
-        self._page_size = page_size
-        self._current_page = current_page
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'PagedPersonsv2':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The PagedPersonsv2 of this PagedPersonsv2.  # noqa: E501
-        :rtype: PagedPersonsv2
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def items(self) -> List[Person]:
-        """Gets the items of this PagedPersonsv2.
-
-
-        :return: The items of this PagedPersonsv2.
-        :rtype: List[Person]
-        """
-        return self._items
-
-    @items.setter
-    def items(self, items: List[Person]):
-        """Sets the items of this PagedPersonsv2.
-
-
-        :param items: The items of this PagedPersonsv2.
-        :type items: List[Person]
-        """
-
-        self._items = items
-
-    @property
-    def total_items(self) -> int:
-        """Gets the total_items of this PagedPersonsv2.
-
-
-        :return: The total_items of this PagedPersonsv2.
-        :rtype: int
-        """
-        return self._total_items
-
-    @total_items.setter
-    def total_items(self, total_items: int):
-        """Sets the total_items of this PagedPersonsv2.
-
-
-        :param total_items: The total_items of this PagedPersonsv2.
-        :type total_items: int
-        """
-
-        self._total_items = total_items
-
-    @property
-    def total_pages(self) -> int:
-        """Gets the total_pages of this PagedPersonsv2.
-
-
-        :return: The total_pages of this PagedPersonsv2.
-        :rtype: int
-        """
-        return self._total_pages
-
-    @total_pages.setter
-    def total_pages(self, total_pages: int):
-        """Sets the total_pages of this PagedPersonsv2.
-
-
-        :param total_pages: The total_pages of this PagedPersonsv2.
-        :type total_pages: int
-        """
-
-        self._total_pages = total_pages
-
-    @property
-    def page_size(self) -> int:
-        """Gets the page_size of this PagedPersonsv2.
-
-
-        :return: The page_size of this PagedPersonsv2.
-        :rtype: int
-        """
-        return self._page_size
-
-    @page_size.setter
-    def page_size(self, page_size: int):
-        """Sets the page_size of this PagedPersonsv2.
-
-
-        :param page_size: The page_size of this PagedPersonsv2.
-        :type page_size: int
-        """
-
-        self._page_size = page_size
-
-    @property
-    def current_page(self) -> int:
-        """Gets the current_page of this PagedPersonsv2.
-
-
-        :return: The current_page of this PagedPersonsv2.
-        :rtype: int
-        """
-        return self._current_page
-
-    @current_page.setter
-    def current_page(self, current_page: int):
-        """Sets the current_page of this PagedPersonsv2.
-
-
-        :param current_page: The current_page of this PagedPersonsv2.
-        :type current_page: int
-        """
-
-        self._current_page = current_page
