# swagger_server/models/person.py
@@ -16,7 +16,7 @@ class Person(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, first_name: str=None, last_name: str=None, username: str=None, date_of_birth: date=None, last_time_online: datetime=None):  # noqa: E501
+    def __init__(self, first_name: str=None, last_name: str=None, username: str='username', date_of_birth: date=None, last_time_online: datetime=None):  # noqa: E501
         """Person - a model defined in Swagger
 
         :param first_name: The first_name of this Person.  # noqa: E501
@@ -129,8 +129,8 @@ class Person(Model):
             raise ValueError("Invalid value for `username`, length must be less than or equal to `64`")  # noqa: E501
         if username is not None and len(username) < 8:
             raise ValueError("Invalid value for `username`, length must be greater than or equal to `8`")  # noqa: E501
-        if username is not None and not re.search(r'[\w\d]{8,64}', username):  # noqa: E501
-            raise ValueError("Invalid value for `username`, must be a follow pattern or equal to `/[\\w\\d]{8,64}/`")  # noqa: E501
+        if username is not None and not re.search(r'[a-z0-9]{8,64}', username):  # noqa: E501
+            raise ValueError("Invalid value for `username`, must be a follow pattern or equal to `/[a-z0-9]{8,64}/`")  # noqa: E501
 
         self._username = username
 
